moonshine_cjs.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length);
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1)
          + peg$padEnd("", last - s.column, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Unit: peg$parseUnit };
  var peg$startRuleFunction = peg$parseUnit;

  var peg$c0 = "unit";
  var peg$c1 = "[";
  var peg$c2 = "]";
  var peg$c3 = "//";
  var peg$c4 = "/*";
  var peg$c5 = "*/";
  var peg$c6 = "stage";
  var peg$c7 = "library";
  var peg$c8 = "sprite";
  var peg$c9 = "sounds";
  var peg$c10 = "costumes";
  var peg$c11 = "not defined";
  var peg$c12 = "define struct";
  var peg$c13 = "[]";
  var peg$c14 = ":";
  var peg$c15 = "\"";
  var peg$c16 = ",";
  var peg$c17 = "define";
  var peg$c18 = "(";
  var peg$c19 = ")";
  var peg$c20 = ".";
  var peg$c21 = "true";
  var peg$c22 = "false";
  var peg$c23 = "'";
  var peg$c24 = "{";
  var peg$c25 = "}";
  var peg$c26 = "locals";
  var peg$c27 = "<=";
  var peg$c28 = "when";
  var peg$c29 = ";";

  var peg$r0 = /^[ \t\n\r]/;
  var peg$r1 = /^[ \t]/;
  var peg$r2 = /^[\r\n]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[^0-9]/;
  var peg$r5 = /^[A-Za-z0-9_]/;
  var peg$r6 = /^[^A-Za-z0-9_]/;
  var peg$r7 = /^[ \f\n\r\t\v\xA0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\uFEFF]/;
  var peg$r8 = /^[^ \f\n\r\t\v\xA0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\uFEFF]/;
  var peg$r9 = /^[^ 0-9[\]()\f\n\r\t\v\xA0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\uFEFF]/;
  var peg$r10 = /^[^[\]()\f\n\r\t\v\xA0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\uFEFF]/;
  var peg$r11 = /^[\t]/;
  var peg$r12 = /^[\r]/;
  var peg$r13 = /^[\n]/;
  var peg$r14 = /^[\v]/;
  var peg$r15 = /^[\f]/;
  var peg$r16 = /^[^\n]/;

  var peg$e0 = peg$otherExpectation("optional whitespace");
  var peg$e1 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e2 = peg$otherExpectation("mandatory whitespace");
  var peg$e3 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e4 = peg$otherExpectation("just space");
  var peg$e5 = peg$otherExpectation("new line");
  var peg$e6 = peg$classExpectation(["\r", "\n"], false, false);
  var peg$e7 = peg$otherExpectation("digit");
  var peg$e8 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e9 = peg$otherExpectation("not digit");
  var peg$e10 = peg$classExpectation([["0", "9"]], true, false);
  var peg$e11 = peg$otherExpectation("alphanumeric");
  var peg$e12 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false);
  var peg$e13 = peg$otherExpectation("not alphanumeric");
  var peg$e14 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], true, false);
  var peg$e15 = peg$otherExpectation("single whitespace");
  var peg$e16 = peg$classExpectation([" ", "\f", "\n", "\r", "\t", "\v", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000", "\uFEFF"], false, false);
  var peg$e17 = peg$otherExpectation("not whitespace");
  var peg$e18 = peg$classExpectation([" ", "\f", "\n", "\r", "\t", "\v", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000", "\uFEFF"], true, false);
  var peg$e19 = peg$otherExpectation("neither digit nor whitespace nor structure characters");
  var peg$e20 = peg$classExpectation([" ", ["0", "9"], "[", "]", "(", ")", "\f", "\n", "\r", "\t", "\v", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000", "\uFEFF"], true, false);
  var peg$e21 = peg$otherExpectation("not non-space whitespace nor structure characters");
  var peg$e22 = peg$classExpectation(["[", "]", "(", ")", "\f", "\n", "\r", "\t", "\v", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000", "\uFEFF"], true, false);
  var peg$e23 = peg$otherExpectation("horizontal tab");
  var peg$e24 = peg$classExpectation(["\t"], false, false);
  var peg$e25 = peg$otherExpectation("carriage return");
  var peg$e26 = peg$classExpectation(["\r"], false, false);
  var peg$e27 = peg$otherExpectation("newline");
  var peg$e28 = peg$classExpectation(["\n"], false, false);
  var peg$e29 = peg$otherExpectation("vertical tab");
  var peg$e30 = peg$classExpectation(["\v"], false, false);
  var peg$e31 = peg$otherExpectation("form feed");
  var peg$e32 = peg$classExpectation(["\f"], false, false);
  var peg$e33 = peg$literalExpectation("unit", false);
  var peg$e34 = peg$literalExpectation("[", false);
  var peg$e35 = peg$literalExpectation("]", false);
  var peg$e36 = peg$otherExpectation("comment");
  var peg$e37 = peg$literalExpectation("//", false);
  var peg$e38 = peg$classExpectation(["\n"], true, false);
  var peg$e39 = peg$literalExpectation("/*", false);
  var peg$e40 = peg$anyExpectation();
  var peg$e41 = peg$literalExpectation("*/", false);
  var peg$e42 = peg$literalExpectation("stage", false);
  var peg$e43 = peg$literalExpectation("library", false);
  var peg$e44 = peg$literalExpectation("sprite", false);
  var peg$e45 = peg$literalExpectation("sounds", false);
  var peg$e46 = peg$literalExpectation("costumes", false);
  var peg$e47 = peg$literalExpectation("not defined", false);
  var peg$e48 = peg$literalExpectation("define struct", false);
  var peg$e49 = peg$otherExpectation("name");
  var peg$e50 = peg$otherExpectation("blockdef");
  var peg$e51 = peg$literalExpectation("[]", false);
  var peg$e52 = peg$otherExpectation("named return type");
  var peg$e53 = peg$literalExpectation(":", false);
  var peg$e54 = peg$literalExpectation("\"", false);
  var peg$e55 = peg$literalExpectation(",", false);
  var peg$e56 = peg$otherExpectation("defsig3");
  var peg$e57 = peg$literalExpectation("define", false);
  var peg$e58 = peg$literalExpectation("(", false);
  var peg$e59 = peg$literalExpectation(")", false);
  var peg$e60 = peg$otherExpectation("defsig2");
  var peg$e61 = peg$otherExpectation("defsig1");
  var peg$e62 = peg$otherExpectation("defsig0");
  var peg$e63 = peg$otherExpectation("callsig3");
  var peg$e64 = peg$otherExpectation("callsig2");
  var peg$e65 = peg$otherExpectation("callsig1");
  var peg$e66 = peg$otherExpectation("callsig0");
  var peg$e67 = peg$literalExpectation(".", false);
  var peg$e68 = peg$literalExpectation("true", false);
  var peg$e69 = peg$literalExpectation("false", false);
  var peg$e70 = peg$literalExpectation("'", false);
  var peg$e71 = peg$literalExpectation("{", false);
  var peg$e72 = peg$literalExpectation("}", false);
  var peg$e73 = peg$literalExpectation("locals", false);
  var peg$e74 = peg$literalExpectation("<=", false);
  var peg$e75 = peg$literalExpectation("when", false);
  var peg$e76 = peg$literalExpectation(";", false);

  var peg$f0 = function() {return undefined};
  var peg$f1 = function(name, values) {return {name, type: 'Unit', values}};
  var peg$f2 = function(value) { return {type: 'Comment', name: "comment", value: value.join('')}};
  var peg$f3 = function(values) {return {name: 'Stage', type: 'Stage', values}};
  var peg$f4 = function(values) {return {name: 'Library', type: 'Library', values}};
  var peg$f5 = function(name, values) {return {name, type: 'Sprite', values}};
  var peg$f6 = function(name) { name[1].unshift(name[0]); console.log( `name: ${name[1].join("").trim()}`); return name[1].join("").trim() };
  var peg$f7 = function(name, values) {return {name, type:'Form', values}};
  var peg$f8 = function(name) {return name + "List"};
  var peg$f9 = function(name, len) {return name + "List/" + len.value};
  var peg$f10 = function(name, type, returnName) {return {name, type, returnName}};
  var peg$f11 = function(name, returnName) {return {name, type:null, returnName}};
  var peg$f12 = function(name, type) {return {name, type, returnName:name}};
  var peg$f13 = function(na, pa, nb, pb, nc, pc, nd) {return { nameParts: [na,nb,nc,nd], name:[na,nb,nc,nd].join('()'), params: [pa,pb,pc] }};
  var peg$f14 = function(na, pa, nb, pb, nc) {return { nameParts: [na,nb,nc], name:[na,nb,nc].join('()'), params: [pa,pb] }};
  var peg$f15 = function(na, pa, nb) {return { nameParts: [na,nb], name: [na,nb].join('()'), params: [pa] }};
  var peg$f16 = function(na) {return { nameParts: [na], name:na, params: [] }};
  var peg$f17 = function(na, aa, nb, ab, nc, ac, nd) {return { nameParts:[na,nb,nc,nd], name:[na,nb,nc,nd].join('()'), args:[aa, ab, ac] }};
  var peg$f18 = function(na, aa, nb, ab, nc) {return { nameParts: [na,nb,nc], name:[na,nb,nc].join('()'), args:[aa, ab] }};
  var peg$f19 = function(na, aa, nb) {return { nameParts:[na,nb], name:[na,nb].join('()'), args:[aa] }};
  var peg$f20 = function(na) {return { nameParts:[na], name:na, args:[] }};
  var peg$f21 = function() {return [] };
  var peg$f22 = function(a) { return [a] };
  var peg$f23 = function(a, b) {return [a,b]};
  var peg$f24 = function(a, b, c) { return [a,b,c] };
  var peg$f25 = function() { return [] };
  var peg$f26 = function(a, b) { return [a,b] };
  var peg$f27 = function(a, b, c) {return [a, b, c]};
  var peg$f28 = function(object, key) {return {type: "KeyedValue", object, key} };
  var peg$f29 = function(array, index) { return {type: "IndexedValue", array, index} };
  var peg$f30 = function() {return {type: 'Float', value: parseFloat(text())}};
  var peg$f31 = function() {return {type: 'Integer', value: parseInt(text(), 10)}};
  var peg$f32 = function() {return {type: 'Truth', value: text()==='true'}};
  var peg$f33 = function() { return {type: 'Text', value: text()} };
  var peg$f34 = function(vals, val) {let l = vals.map(a => a[0]); l.push(val); return l;};
  var peg$f35 = function(list) { return {type: 'List', value: list} };
  var peg$f36 = function(list) { return {type: 'Dict', value: list} };
  var peg$f37 = function(key, value) { return {key, value} };
  var peg$f38 = function() {let l = vals.map(a => a[0]); l.push(val); return l};
  var peg$f39 = function(exprs) {return exprs };
  var peg$f40 = function(locals, exprs) {return {locals, exprs}};
  var peg$f41 = function(expr) { return expr };
  var peg$f42 = function(sig, body) { return {type: 'Step', name: sig.name.name, returnType: sig.name.type, returnName: sig.name.returnName || sig.name.name, params: sig.params, body}};
  var peg$f43 = function(sig, body) {return {type: 'Context', name: sig.name, params: sig.params, locals: body.locals || [], body: body.exprs || body}};
  var peg$f44 = function(name) {return {name: 'when ' + name}};
  var peg$f45 = function(sig, body) {return {type: 'Trigger', name: sig.name, locals: body.locals || [], body: body.exprs || body}};
  var peg$f46 = function(sig, body) {return {type: 'Value', name: sig.name, returnType: sig.type, value: body}};
  var peg$f47 = function(name) {return {namespace:null, name}};
  var peg$f48 = function(namespace, name) {return {namespace, name}};
  var peg$f49 = function(cs) {return {type: 'StepCall', name:cs.name, args:cs.args, exprs:null}};
  var peg$f50 = function(name, exprs) {return {type: "TriggerCall", name, args:null, exprs}};
  var peg$f51 = function(cs, exprs) {return {type: 'ContextCall', name: cs.name, args:cs.args, exprs}};
  var peg$f52 = function(cs) {return {type: "ValueCall", name:cs.name, args:cs.args, exprs:null}};

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parse_() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    if (peg$r0.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      if (peg$r0.test(input.charAt(peg$currPos))) {
        s2 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
    }
    peg$savedPos = s0;
    s1 = peg$f0();
    s0 = s1;
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e0); }

    return s0;
  }

  function peg$parse__() {
    var s0, s1, s2;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    if (peg$r1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$r1.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0();
    }
    s0 = s1;
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }

    return s0;
  }

  function peg$parseWS() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    if (peg$r1.test(input.charAt(peg$currPos))) {
      s1 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      if (peg$r1.test(input.charAt(peg$currPos))) {
        s1 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
    }
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e4); }

    return s0;
  }

  function peg$parseNL() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseWS();
    s2 = [];
    if (peg$r2.test(input.charAt(peg$currPos))) {
      s3 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        if (peg$r2.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }

    return s0;
  }

  function peg$parsed() {
    var s0, s1;

    peg$silentFails++;
    if (peg$r3.test(input.charAt(peg$currPos))) {
      s0 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e7); }
    }

    return s0;
  }
